// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/vsts createPr() should create and return a PR object 1`] = `
Object {
  "displayNumber": "Pull Request #456",
  "number": 456,
  "pullRequestId": 456,
}
`;

exports[`platform/vsts createPr() should create and return a PR object from base branch 1`] = `
Object {
  "displayNumber": "Pull Request #456",
  "number": 456,
  "pullRequestId": 456,
}
`;

exports[`platform/vsts deleteBranch should delete the branch 1`] = `
Array [
  Object {
    "name": "refs/head/testBranch",
    "newObjectId": "0000000000000000000000000000000000000000",
    "oldObjectId": "123456",
  },
]
`;

exports[`platform/vsts ensureComment add comment 1`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;

exports[`platform/vsts findPr(branchName, prTitle, state) returns pr if found it all state 1`] = `
Object {
  "head": Object {
    "ref": "branch-a",
  },
  "number": 1,
  "state": "closed",
  "title": "branch a pr",
}
`;

exports[`platform/vsts findPr(branchName, prTitle, state) returns pr if found it close 1`] = `
Object {
  "head": Object {
    "ref": "branch-a",
  },
  "number": 1,
  "state": "closed",
  "title": "branch a pr",
}
`;

exports[`platform/vsts findPr(branchName, prTitle, state) returns pr if found it open 1`] = `
Object {
  "head": Object {
    "ref": "branch-a",
  },
  "number": 1,
  "state": "open",
  "title": "branch a pr",
}
`;

exports[`platform/vsts findPr(branchName, prTitle, state) returns pr if found not open 1`] = `
Object {
  "head": Object {
    "ref": "branch-a",
  },
  "number": 1,
  "state": "closed",
  "title": "branch a pr",
}
`;

exports[`platform/vsts getAllRenovateBranches() should return all renovate branches 1`] = `
Array [
  "renovate/a",
  "renovate/b",
]
`;

exports[`platform/vsts getBranchLastCommitTime should return a Date 1`] = `"1986-11-07T00:00:00Z"`;

exports[`platform/vsts getBranchPr(branchName) should return the pr 1`] = `null`;

exports[`platform/vsts getCommitMessages() returns commits messages 1`] = `
Array [
  "com1",
  "com2",
  "com3",
]
`;

exports[`platform/vsts getFile(filePatch, branchName) should return the encoded file content 1`] = `"Hello Renovate!"`;

exports[`platform/vsts getFileList should return the files matching the fileName 1`] = `
Array [
  "package.json",
  "src/app/package.json",
  "src/otherapp/package.json",
  "symlinks/package.json",
]
`;

exports[`platform/vsts getPr(prNo) should return a pr in the right format 1`] = `
Object {
  "pullRequestId": 1234,
}
`;

exports[`platform/vsts getRepos should return an array of repos 1`] = `
Array [
  Array [],
]
`;

exports[`platform/vsts getRepos should return an array of repos 2`] = `
Array [
  "prj1/repo1",
  "prj1/repo2",
]
`;

exports[`platform/vsts initRepo should initialise the config for a repo 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`platform/vsts initRepo should initialise the config for a repo 2`] = `
Object {
  "baseBranch": "defBr",
  "baseCommitSHA": "1234",
  "defaultBranch": "defBr",
  "fileList": null,
  "isFork": false,
  "mergeMethod": "merge",
  "owner": "?owner?",
  "prList": null,
  "privateRepo": true,
  "repoForceRebase": false,
  "repoId": "1",
  "repository": "some-repo",
}
`;

exports[`platform/vsts setBaseBranch(branchName) sets the base branch 1`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;

exports[`platform/vsts setBaseBranch(branchName) sets the base branch 2`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`platform/vsts updatePr(prNo, title, body) should update the PR 1`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;
